# deca

./: README.md  deca.cabal
.devcontainer/: Dockerfile
.github/workflows/: test.yaml
src/lib/: Deca.hs
src/lib/Deca/: Internal.hs
src/test/: Main.hs
