cabal-version: >= 1.10

name: deca
version: 0.0.0.0
synopsis: Arbitrary precision decimal numbers.
description: Deca provides arbitrary precision decimal numbers.

build-type: Simple
category: Data
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak

source-repository head
    location: https://github.com/tfausak/deca
    type: git

library
    build-depends:
        base >= 4.15.0 && < 4.16
    default-language: Haskell2010
    exposed-modules: Deca
    ghc-options:
        -Weverything
        -Wno-implicit-prelude
        -Wno-missing-deriving-strategies
        -Wno-missing-export-lists
        -Wno-missing-exported-signatures
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-safe
    hs-source-dirs: src/lib

test-suite test
    build-depends:
        base
        , deca
        , HUnit >= 1.6.2 && < 1.7
    default-language: Haskell2010
    ghc-options: -rtsopts -threaded
    hs-source-dirs: src/test
    main-is: Main.hs
    type: exitcode-stdio-1.0
